--- a/style/style.css
+++ b/style/style.css
@@ -200,7 +200,7 @@
 /*! Style 2 !*/
 /* Body 2 */
 .body-2 {
-  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1)),
+  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)),
     url(https://images.unsplash.com/photo-1484902945377-bd2a38e625cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   background-position: center center;
   background-repeat: no-repeat;
@@ -215,8 +215,8 @@
 }
 /* main 2 */
 .main-2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(/images/background/body-2.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),
+    url(https://images.unsplash.com/photo-1484902945377-bd2a38e625cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
