--- a/style/style.css
+++ b/style/style.css
@@ -24,8 +24,7 @@
 
 /* Content */
 .content {
-  /*   background-color: red; */
-  width: 70%;
+  width: 100%;
   height: 80%;
   /* - */
   display: flex;
@@ -37,7 +36,6 @@
 
 /*! Header !*/
 .header {
-  /*  background-color: green; */
   width: 100%;
   height: 10%;
   margin-top: 0.5em;
@@ -63,6 +61,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  gap: 5px;
 }
 /* header info */
 .cloud-info,
@@ -115,7 +114,6 @@
 
 /*! section 2 !*/
 .section-2 {
-  /*   background-color: aquamarine; */
   width: 100%;
   height: 20%;
   /* - */
